--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "require-dir": "^1.0.0",
     "sass": "^1.49.10",
     "sync-request": "^6.0.0",
+    "underscore": "^1.13.4",
     "universal-analytics": "^0.5.3",
     "uuid": "^8.3.2"
   }
